@@ -1042,13 +1042,12 @@ use with M-x."
 (defun read-buffer-to-switch (prompt)
   "Read the name of a buffer to switch to and return as a string.
 It is intended for `switch-to-buffer' family of commands since they
-need to omit the name of current buffer from the list of complations
+need to omit the name of current buffer from the list of completions
 and default values."
-  (minibuffer-with-setup-hook
-      (lambda ()
-	(set (make-local-variable 'minibuffer-completion-table)
-	     (internal-complete-buffer-except (other-buffer (current-buffer) t))))
-    (read-buffer prompt (other-buffer (current-buffer)))))
+  (let ((rbts-completion-table (internal-complete-buffer-except)))
+    (minibuffer-with-setup-hook
+        (lambda () (setq minibuffer-completion-table rbts-completion-table))
+      (read-buffer prompt (other-buffer (current-buffer))))))
 
 (defun switch-to-buffer-other-window (buffer &optional norecord)
   "Select buffer BUFFER in another window.
